active item gets unique id

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <title>Basic item slide</title>
 <!--Dependinces--->
 <script src="../plugins/hammer.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="../plugins/jquery-1.11.1.min.js"></script>
 
 <script src="../src/itemslide.js"></script>
 <link href="basicslide.css" rel="stylesheet">
@@ -12,13 +12,16 @@
 
 </head>
 <body>
-<div>
+
 <ul id="slide">
 <li>
 Hello
 </li>
 <li>
 Sup
+</li>
+<li>
+Everything's good how bout you?
 </li>
 </ul>
 
