--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Itemslide.js</title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
 <script src="plugins/hammer.min.js"></script>
 <script src="plugins/jquery-1.11.1.min.js"></script>
@@ -13,7 +14,7 @@
 </head>
 <body>
 
-<ul id="slide">
+<ul id="slide" style="margin-top:3vh;">
 <li>
 Hello
 </li>
@@ -24,7 +25,7 @@ Sup
 Everything's good how bout you?
 </li>
 </ul>
-<br>
-Welcome to itemslide js plugin!
+<div id="headertext">
+Welcome to itemslide js plugin!</div>
 </body>
 </html>
