--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<ul id="slide" style="margin-top:3vh;">
+<ul id="slide" style="margin-top:13vh;">
 <li>
 Hello
 </li>
@@ -26,6 +26,6 @@ Everything's good how bout you?
 </li>
 </ul>
 <div id="headertext">
-Welcome to itemslide js plugin!</div>
+Itemslide.JS</div>
 </body>
 </html>
