--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-<title>Itemslide.js</title>
+<title>Itemslide.JS</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
 <script src="plugins/hammer.min.js"></script>
 <script src="plugins/jquery-1.11.1.min.js"></script>
-
+<!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
+    
 <script src="src/itemslide.js"></script>
 <link href="examples/basicslide.css" rel="stylesheet">
 <script src="examples/basicslide.js"></script>
@@ -13,19 +14,24 @@
 
 </head>
 <body>
-
-<ul id="slide" style="margin-top:13vh;">
-<li>
-Hello
-</li>
-<li>
-Sup
-</li>
-<li>
-Everything's good how bout you?
-</li>
-</ul>
 <div id="headertext">
 Itemslide.JS</div>
+<ul id="slide" style="margin-top:4vh;">
+<li>
+Welcome to Itemslide.JS jQuery Plugin
+</li>
+<li>
+Currently under development
+</li>
+<li>
+Sliding is cool!
+</li>
+<li><br>
+<a href="src/itemslide.js">Download Now</a>
+    <br>
+    (Still under development you should probably wait with that...)
+</li>
+</ul>
+
 </body>
 </html>
