--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
 <script src="plugins/hammer.min.js"></script>
-<script src="plugins/jquery-1.11.1.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
     
 <script src="src/itemslide.js"></script>
@@ -16,7 +16,8 @@
 <body>
 <div id="headertext">
 Itemslide.JS</div>
-<ul id="slide" style="margin-top:4vh;">
+    
+<ul style="margin-top:4vh;">
 <li>
 Welcome to Itemslide.JS jQuery Plugin
 </li>
@@ -31,6 +32,9 @@ Sliding is cool!
     <br>
     (Still under development you should probably wait with that...)
 </li>
+    <li>
+    Enjoy!
+    </li>
 </ul>
 
 </body>
