--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <title>Itemslide.JS</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
-<script src="plugins/hammer.min.js"></script>
+<script src="dependencies/hammer.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script src="dependencies/jquery.transit.min.js"></script>
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
     
 <script src="src/itemslide.js"></script>
