--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Itemslide.JS</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
-<script src="http://github.com/benbarnett/jQuery-Animate-Enhanced/raw/master/scripts/src/jquery.animate-enhanced.js"></script>
+<script src="dependencies/jquery.animate-enhanced.min.js"></script>
 <script src="dependencies/hammer.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
