--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
-    
+    <script src="jquery.easing.1.3.js"></script>
 <script src="src/itemslide.js"></script>
 <link href="examples/basicslide.css" rel="stylesheet">
 <script src="examples/basicslide.js"></script>
