--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <!--Dependinces--->
 
 <script src="dependencies/hammer.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
     <script src="jquery.easing.1.3.js"></script>
-<script src="src/itemslide.js"></script>
-<script src="dependencies/jquery.animate-enhanced.min.js"></script>
+
+    <script src="dependencies/cssforjquery.js"></script>
+<!--<script src="dependencies/jquery.animate-enhanced.min.js"></script>-->
 <link href="examples/basicslide.css" rel="stylesheet">
 <script src="examples/basicslide.js"></script>
-
+<script src="src/itemslide.js"></script>
 
 </head>
 <body>
