--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 </head>
 <body>
+    
 <div id="headertext">
 Itemslide.JS</div>
     
-<ul style="margin-top:4vh;">
+<ul>
 <li>
 Welcome to Itemslide.JS jQuery Plugin
 </li>
@@ -31,6 +32,10 @@ Currently under development
 <li>
 Sliding is cool!
 </li>
+    <li>
+    To use simply write:<br>
+        $("ul").initslide();
+    </li>
 <li><br>
 <a href="src/itemslide.js">Download Now</a>
     <br>
@@ -38,6 +43,13 @@ Sliding is cool!
 </li>
     <li>
     Enjoy!
+    </li>
+    <li>
+        <div id="codetext">
+    Options:<br>
+        duration - duration of swipe animation (default: 275)<br/>
+        pan_sensitivity - panning sensitivity (default: 10)<br/>
+        swipe_sensitivity - swiping sensitivity (default: 250)</div>
     </li>
 </ul>
 
