Slides are now centerized when sliding

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ Sliding is cool!
         swipe_sensitivity - swiping sensitivity (default: 250)</div>
     </li>
 </ul>
-
+<div id="fotter"><a target="_blank" href="https://github.com/itemslide/itemslide.github.io">View on Github</a> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span></div>
 </body>
 </html>
