--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--Dependinces--->
 
 <script src="dependencies/hammer.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="dependencies/jquery-1.11.1.min.js"></script>
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
     <script src="jquery.easing.1.3.js"></script>
@@ -21,14 +21,17 @@
     
 <div id="headertext">
 Itemslide.JS</div>
-    
+    <div id="docsbuttons">
+    <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(7)">Methods</span>
+    </div>
 <ul>
 <li>
 Welcome to Itemslide.JS jQuery Plugin
 </li>
 <li>
-Currently under development
+Works on Desktop and Mobile!
 </li>
+
 <li>
 Sliding is cool!
 </li>
@@ -51,7 +54,18 @@ Sliding is cool!
         pan_sensitivity - panning sensitivity (default: 10)<br/>
         swipe_sensitivity - swiping sensitivity (default: 250)</div>
     </li>
+    <li>
+        <div id="codetext">
+    Methods:<br>
+        next() - goes to next slide<br/>
+        previous() - goes to previous slide<br/>
+        gotoSlide(i) - goes to a specific slide by index</div>
+    </li>
+
+    <li>
+Currently under development
+</li>
 </ul>
-<div id="fotter"><a target="_blank" href="https://github.com/itemslide/itemslide.github.io">View on Github</a> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span></div>
+<div id="fotter" align="center">Written by Nir Lichtman | <a target="_blank" href="https://github.com/itemslide/itemslide.github.io">Github</a><!-- | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span>--></div>
 </body>
 </html>
