smoother swipe in ios

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
     <script src="jquery.easing.1.3.js"></script>
 
-    <script src="dependencies/cssforjquery.js"></script>
-<!--<script src="dependencies/jquery.animate-enhanced.min.js"></script>-->
+    <!--<script src="dependencies/cssforjquery.js"></script>-->
+    <script src="dependencies/jquery.animate-enhanced.min.js"></script>
+<!--<script src="dependencies/ios-fix.js"></script>-->
 <link href="examples/basicslide.css" rel="stylesheet">
 <script src="examples/basicslide.js"></script>
 <script src="src/itemslide.js"></script>
