--- a/index.html
+++ b/index.html
@@ -65,6 +65,42 @@ Sliding is cool!
 
     <li>
 Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
+</li><li>
+Currently under development
 </li>
 </ul>
 <div id="fotter" align="center">Written by Nir Lichtman | <a target="_blank" href="https://github.com/itemslide/itemslide.github.io">Github</a><!-- | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span>--></div>
