Now triggers event when done panning therefore sliding is more accurate!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 <!--Dependinces--->
 
-<script src="dependencies/hammer.min.js"></script>
+<script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 <script src="dependencies/jquery-1.11.1.min.js"></script>
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
