Some text changes...

--- a/index.html
+++ b/index.html
@@ -27,23 +27,27 @@ Itemslide.JS</div>
     </div>
 <ul>
 <li>
-Welcome to Itemslide.JS jQuery Plugin
+<br/>
+    <a href="src/itemslide.js">Download Now</a>
+
 </li>
 <li>
-Works on Desktop and Mobile!
+Tested on:<br/>
+    iPad Mini<br/>
+    Nexus 4<br/>
+    iPhone 4<br/>
 </li>
 
 <li>
-Sliding is cool!
+Very light roughly 5kb
+
 </li>
     <li>
     To use simply write:<br>
         $("ul").initslide();
     </li>
 <li><br>
-<a href="src/itemslide.js">Download Now</a>
-    <br>
-    (Still under development you should probably wait with that...)
+Sliding is Cool!
 </li>
     <li>
     Enjoy!
@@ -103,6 +107,6 @@ Currently under development
 Currently under development
 </li>
 </ul>
-<div id="fotter" align="center">Written by Nir Lichtman | <a target="_blank" href="https://github.com/itemslide/itemslide.github.io">Github</a><!-- | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span>--></div>
+<div id="fotter" align="center">Created by Nir Lichtman <!--| <a target="_blank" href="https://github.com/itemslide/itemslide.github.io">Github</a>--><!-- | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(3)">Init</span> | <span style="cursor:pointer;" onclick="$('ul').gotoSlide(6)">Options</span>--></div>
 </body>
 </html>
