--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 <script src="dependencies/hammer.min.js"></script>
 <script src="dependencies/jquery-1.11.1.min.js"></script>
-    <script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js"></script>
+    <!--<script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js"></script>-->
 <!--<script src="dependencies/jquery.transit.min.js"></script>-->
 <!--<script src="plugins/jquery.easing.compatibility.js"></script>-->
-    <script src="jquery.easing.1.3.js"></script>
+    <!--<script src="jquery.easing.1.3.js"></script>-->
 
     <!--<script src="dependencies/cssforjquery.js"></script>-->
 
