New design stuff and readme stuff

--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>W - Discover</title>
+    <title>Full Screen Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
