Fixed active class stuff and added an option

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="website-src/sliding.js"></script>
 
-    <script src="src/itemslide.min.js"></script>
+    <script src="src/itemslide.js"></script>
 
 </head>
 
@@ -55,6 +55,8 @@
 
 
             <li>
+
+
                 <div id="codetext">
                     Options:
                     <br>duration - duration of swipe animation {default: 250}
@@ -62,6 +64,9 @@
                     <br/>disable_slide - disable swiping and panning {default: false}
                     <br/>disable_autowidth - disable calculation of width {default: false}
                     <br/>(if you want to do it manually)</div>
+
+
+
             </li>
             <li>
                 <div id="codetext">
