Added license and jquery plugin regisry json

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!--Dependinces--->
     <script src="dependencies/hammer.min.js"></script>
-    <script src="dependencies/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <!--Website Files-->
     <link href="website-src/layout.css" rel="stylesheet" />
