added an event fixed some methods and updated readme

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <span style="font-family:'Source Code Pro';font-size:5vmin;">$(<span style="color:#ff931e;">"ul"</span>).<span style="color:#662d91;">initslide</span>();</span>
                 <br/>
                 <span id="downloadarea">
-    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
-        3KB minified - Requires jQuery and Hammer.js
+    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
+        3KB minified<br/>Requires jQuery and Hammer.js
         </span>
 
 
@@ -90,6 +90,7 @@
             <li>
                 <div id="codetext">
                     Events:
+                    <br/>changePos - triggered when the position of the carousel is changed
                     <br>pan - triggered when user pans
                     <br/>changeActiveIndex - triggered when the current active item has changed
                 </div>
