Now you can apply itemslide on more than one html object!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="website-src/sliding.js"></script>
 
-    <script src="src/itemslide.js"></script>
+    <script src="src/itemslide.min.js"></script>
 
 </head>
 
@@ -46,7 +46,7 @@
                 <br/>
                 <span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
-        3KB minified<br/>Requires jQuery and Hammer.js
+        4KB minified<br/>Requires jQuery and Hammer.js
         </span>
 
 
