Fixed an issue with the click to scroll for that added a small dependency check readme for details

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 
 
     <!--Dependinces--->
-    <script src="dependencies/hammer.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="dependencies/hammer.min.js"></script>
+    <script src="dependencies/hammer.jquery.min.js"></script>
 
     <!--Website Files-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
 
     <script src="website-src/sliding.js"></script>
-
-    <script src="src/itemslide.min.js"></script>
-
+    <script src="src/itemslide.js"></script>
 </head>
 
 <body>
