--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <!--Dependinces--->
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="dependencies/hammer.min.js"></script>
+    <!--Optional--->
     <script src="dependencies/hammer.jquery.min.js"></script>
+    <script src="dependencies/jquery.mousewheel.min.js"></script>
 
     <!--Website Files-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
 
     <script src="website-src/sliding.js"></script>
-    <script src="src/itemslide.js"></script>
+    <script src="src/itemslide.min.js"></script>
 </head>
 
 <body>
