Added an "disable_scroll" option

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                     <br/>swipe_sensitivity - swiping sensitivity {default: 250}
                     <br/>disable_slide - disable swiping and panning {default: false}
                     <br/>disable_autowidth - disable calculation of width {default: false}
-                    <br/>(if you want to do it manually)</div>
+                    <br/>(if you want to do it manually)
+                    <br/>disable_scroll - disable scrolling {default: false}
+
+                </div>
 
 
 
