Few layout changes, cleaner code, small fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div id="docsbuttons">
-            <span style="cursor:pointer;" onclick="$('ul').gotoSlide(0)">Init</span> &nbsp; <span style="cursor:pointer;" onclick="$('ul').gotoSlide(1)">Options</span> &nbsp; <span style="cursor:pointer;" onclick="$('ul').gotoSlide(2)">Methods</span> &nbsp; <span style="cursor:pointer;" onclick="$('ul').gotoSlide(4)">Events</span> &nbsp; <a style="text-decoration:none; color:#000;" href="https://github.com/itemslide/itemslide.github.io" target="_blank">Github</a>
+            <span onclick="$('ul').gotoSlide(0)">Init</span> &nbsp; <span onclick="$('ul').gotoSlide(1)">Options</span> &nbsp; <span onclick="$('ul').gotoSlide(2)">Methods</span> &nbsp; <span onclick="$('ul').gotoSlide(4)">Events</span> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io" target="_blank">Github</a>
         </div>
 
 
@@ -47,7 +47,7 @@
                 <br/>
                 <span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
-        5KB minified<br/>Requires jQuery and Hammer.js
+        4KB minified<br/>Requires jQuery and Hammer.js
         </span>
 
 
