Layout design changes

--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
             <span onclick="$('ul').gotoSlide(0)">Init</span> &nbsp; <span onclick="$('ul').gotoSlide(1)">Options</span> &nbsp; <span onclick="$('ul').gotoSlide(2)">Methods</span> &nbsp; <span onclick="$('ul').gotoSlide(4)">Events</span> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io" target="_blank">Github</a>
         </div>
 
-
+        <span id="downloadarea">
+    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
+        4KB minified. Requires jQuery and Hammer.js
+        </span>
 
     </header>
 
 
     <div id="scrolling">
         <ul>
-            <li>
-                To use simply write:
+            <li><span id="touse">
+                To use simply write
                 <br/>
-                <span style="font-family:'Source Code Pro';font-size:5vmin;">$(<span style="color:#ff931e;">"ul"</span>).<span style="color:#662d91;">initslide</span>();</span>
+                <span id="initcode">$(<span style="color:#ff931e;">"ul"</span>).<span style="color:#3385D6;">initslide</span>();</span><!--662d91--->
                 <br/>
-                <span id="downloadarea">
+                <!--<span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
         4KB minified<br/>Requires jQuery and Hammer.js
-        </span>
-
+        </span>-->
+</span>
 
             </li>
 
