Added a new option

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="website-src/sliding.css" rel="stylesheet" />
 
     <script src="website-src/sliding.js"></script>
-    <script src="src/itemslide.min.js"></script>
+    <script src="src/itemslide.js"></script>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
             <li><span id="touse">
                 To use simply write
                 <br/>
-                <span id="initcode">$(<span style="color:#ff931e;">"ul"</span>).<span style="color:#3385D6;">initslide</span>();</span><!--662d91--->
+                <span id="initcode">$(<span style="color:#ff931e;">"ul"</span>).<span style="color:#4791DA;">initslide</span>();</span><!--662d91--->
                 <br/>
                 <!--<span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
