Fixed lag, added a method, renamed add

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="website-src/sliding.css" rel="stylesheet" />
 
     <script src="website-src/sliding.js"></script>
-    <script src="src/itemslide.min.js"></script>
+    <script src="src/itemslide.js"></script>
 </head>
 
 <body>
