--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
     <!--CSS--->
-    <link href="main.css" rel="stylesheet"/>
+    <link href="main.css" rel="stylesheet" />
 
 
 
@@ -18,7 +18,7 @@
     <script src="plugins/hammer.min.js"></script>
     <script src="../../dependencies/hammer.jquery.min.js"></script>
     <script src="http://itemslide.github.io/src/itemslide.min.js"></script>
-
+    <script src="../../dependencies/jquery.mousewheel.min.js"></script>
 
     <!--Scripts--->
     <script src="sliding.js"></script>
@@ -27,17 +27,18 @@
 
 <body>
 
-
-    <ul>
-        <li>
-            <div id="blackcover">
-				<h1>Swipe me</h1>
-			</div>
-        </li>
-        <li>
-            <h1>Hi.</h1>
-        </li>
-    </ul>
+    <div id="frame">
+        <ul>
+            <li>
+                <div id="blackcover">
+                    <h1>Swipe me</h1>
+                </div>
+            </li>
+            <li>
+                <h1>Hi.</h1>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
