Minor fix and other slight changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
                 <div id="codetext">
-                    Options:
+                    Options
                     <br>duration - duration of swipe animation {default: 250}
                     <br/>swipe_sensitivity - swiping sensitivity {default: 250}
                     <br/>disable_slide - disable swiping and panning {default: false}
@@ -77,7 +77,7 @@
             </li>
             <li>
                 <div id="codetext">
-                    Methods:
+                    Methods
                     <br>Get:
                     <br/>getActiveIndex() - get current active slide index
                     <br/>getCurrentPos() - get current position of carousel (pixels)
@@ -85,7 +85,7 @@
             </li>
             <li>
                 <div id="codetext">
-                    Set:
+                    Set
                     <br/>next() - goes to next slide
                     <br/>previous() - goes to previous slide
                     <br/>gotoSlide(i) - goes to a specific slide by index
@@ -96,7 +96,7 @@
             </li>
             <li>
                 <div id="codetext">
-                    Events:
+                    Events
                     <br/>changePos - triggered when the position of the carousel is changed
                     <br>pan - triggered when user pans
                     <br/>changeActiveIndex - triggered when the current active item has changed
