Fixed lag on firefox, now works smooth on all major browers.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <!--Dependinces--->
@@ -12,17 +13,19 @@
     <!--Website Files-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
-
     <script src="website-src/sliding.js"></script>
     <script src="src/itemslide.min.js"></script>
-    </head>
+
+
+</head>
+
 <body>
     <header>
 
 
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
- <div id="docsbuttons">
+        <div id="docsbuttons">
             <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
         </div>
 
@@ -34,7 +37,7 @@
 
     </header>
 
-<div id="scrolling">
+    <div id="scrolling">
         <ul>
             <li>
                 Welcome
@@ -59,11 +62,12 @@
                 Click to Slide
             </li>
             <li>
-                Tested on iPhone 4, iPad mini<br/>
-                Nexus 4 and LG G3
+                Tested on iPhone 4, iPad mini
+                <br/>Nexus 4 and LG G3
             </li>
         </ul>
     </div>
     <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
-    </body>
+</body>
+
 </html>
