Cleaner and nicer code, added forum

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
         <div id="docsbuttons">
-            <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
+           <a href="forum.html">Forum</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
         </div>
 
 
