Starting to implement new design.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
+
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
+
     <!--Dependinces--->
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="dependencies/hammer.min.js"></script>
@@ -25,13 +27,13 @@
 
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
-        <div id="docsbuttons">
-           <a href="forum.html">Forum</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
-        </div>
+        <!--<div id="docsbuttons">
+           <a href="forum.html">Discuss</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
+        </div>-->
 
-
+        <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/></a>
         <span id="downloadarea">
-    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/><br/>
+    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
         4KB minified. Requires jQuery and Hammer.js
         </span>
 
@@ -40,7 +42,7 @@
     <div id="scrolling">
         <ul>
             <li>
-                Welcome
+                Swipe
 
 
             </li>
@@ -55,9 +57,7 @@
 
 
             </li>
-            <li>
-                Swipe
-            </li>
+
             <li>
                 Click to Slide
             </li>
@@ -69,5 +69,4 @@
     </div>
     <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
 </body>
-
 </html>
