Minor layout change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
            <a href="forum.html">Discuss</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
         </div>-->
 
-        <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/></a>
+        <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/><br/>Github
+        </a>
         <span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
         4KB minified. Requires jQuery and Hammer.js
