Dropped hammer.js dependency

--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 
 <head>
 
+    <title>ItemSlide.js</title>
+
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
     <!--Dependinces--->
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="dependencies/hammer.min.js"></script>
+
+    <script src="src/itemslide.min.js"></script>
 
     <!--Optional--->
-    <script src="dependencies/hammer.jquery.min.js"></script>
     <script src="dependencies/jquery.mousewheel.min.js"></script>
 
     <!--Website Files-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
     <script src="website-src/sliding.js"></script>
-    <script src="src/itemslide.min.js"></script>
+
 
 
 </head>
@@ -35,7 +37,7 @@
         </a>
         <span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
-        4KB minified. Requires jQuery and Hammer.js
+        just 5KB minified
         </span>
 
     </header>
