bug fixes and minor code changes - Release 0.2.3

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+
     <title>ItemSlide.js</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
     <!--Dependinces--->
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <script src="src/itemslide.min.js"></script>
 
@@ -29,9 +30,7 @@
 
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
-        <!--<div id="docsbuttons">
-           <a href="forum.html">Discuss</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Docs</a> &nbsp; <a href="https://github.com/itemslide/itemslide.github.io">Github</a>
-        </div>-->
+
 
         <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/><br/>Github
         </a>
