Full Screen Example Update

--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -14,10 +14,10 @@
 
 
     <!--Plugins--->
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="plugins/hammer.min.js"></script>
-    <script src="../../dependencies/hammer.jquery.min.js"></script>
-    <script src="http://itemslide.github.io/src/itemslide.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    
+    
+    <script src="//itemslide.github.io/src/itemslide.min.js"></script>
     <script src="../../dependencies/jquery.mousewheel.min.js"></script>
 
     <!--Scripts--->
