Minor landing page layout changes.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 
-    <title>ItemSlide.js</title>
+    <title>ItemSlide - jQuery plugin for a touch enabled carousel</title>
 
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
     <!--Dependinces--->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="src/itemslide.min.js"></script>
+    <script src="src/itemslide.js"></script>
 
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
@@ -41,10 +41,12 @@
 
     </header>
 
+
+
     <div id="scrolling">
         <ul>
             <li>
-                Swipe
+                Swipe<br/>
 
 
             </li>
@@ -64,11 +66,11 @@
                 Click to Slide
             </li>
             <li>
-                Tested on iPhone 4, iPad mini
-                <br/>Nexus 4 and LG G3
+                Mobile friendly
             </li>
         </ul>
     </div>
+
     <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
 </body>
 </html>
