Added a new option to optimize for full screen navigation.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Dependinces--->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="src/itemslide.js"></script>
+    <script src="src/itemslide.min.js"></script>
 
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
@@ -31,7 +31,6 @@
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
 
-
         <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/><br/>Github
         </a>
         <span id="downloadarea">
@@ -47,7 +46,6 @@
         <ul>
             <li>
                 Swipe<br/>
-
 
             </li>
 
@@ -68,6 +66,8 @@
             <li>
                 Mobile friendly
             </li>
+            <li>
+            <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></li>
         </ul>
     </div>
 
