--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -29,13 +29,19 @@
 
     <div id="frame">
         <ul>
-            <li>
-                <div id="blackcover">
+            <li style="background-color:#FF3B30;">
+
                     <h1>Swipe me</h1>
-                </div>
+
             </li>
-            <li>
-                <h1>Hi.</h1>
+            <li style="background-color:#1D62F0;">
+
+            </li>
+            <li style="background-color:#36EB7D;">
+
+            </li>
+            <li style="background-color:#FE8C37;">
+                <h1><a href="http://itemslide.github.io/">Website</a></h1>
             </li>
         </ul>
     </div>
