--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -40,7 +40,7 @@
             <li style="background-color:#36EB7D;">
 
             </li>
-            <li style="background-color:#FE8C37;">
+            <li style="background-color:#FE8C37;"><br>
                 <h1><a href="http://itemslide.github.io/">Website</a></h1>
             </li>
         </ul>
