--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
     <title>ItemSlide - jQuery plugin for a touch enabled carousel</title>
 
@@ -31,7 +31,9 @@
         <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
         </div>
 
-        <a id="github" href="https://github.com/itemslide/itemslide.github.io"><img src="website-src/octocat.svg"/><br/>Github
+        <a id="github" href="https://github.com/itemslide/itemslide.github.io">
+            <img src="website-src/octocat.svg" />
+            <br/>Github
         </a>
         <span id="downloadarea">
     <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
@@ -40,12 +42,20 @@
 
     </header>
 
+    <div id="welcome">
+        <span>
+        jQuery plugin for a touch enabled carousel.<br/>
+            <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Documentation</a> <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a>
+        </span>
+    </div>
 
 
     <div id="scrolling">
+        <!--Slider--->
         <ul>
             <li>
-                Swipe<br/>
+                Swipe
+                <br/>
 
             </li>
 
@@ -66,11 +76,28 @@
             <li>
                 Mobile friendly
             </li>
-            <li>
-            <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></li>
+            <!--<li>
+                <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a>
+            </li>-->
         </ul>
     </div>
 
     <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
+
+
+
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-56825472-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+
 </body>
+
 </html>
