--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -17,7 +17,7 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     
     
-    <script src="//itemslide.github.io/src/itemslide.min.js"></script>
+    <script src="../../src/itemslide.min.js"></script>
     <script src="../../dependencies/jquery.mousewheel.min.js"></script>
 
     <!--Scripts--->
