Added in-site docs and improved springy panning when out of edges

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </header>
 
     <div id="welcome">
-        <span>
+        <span class="content">
         jQuery plugin for a touch enabled carousel.<br/>
-            <a href="https://github.com/itemslide/itemslide.github.io/blob/master/README.md">Documentation</a> <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a>
+            <span class="menu"><a href="docs/index.html">Documentation</a> <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
         </span>
     </div>
 
@@ -76,9 +76,6 @@
             <li>
                 Mobile friendly
             </li>
-            <!--<li>
-                <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a>
-            </li>-->
         </ul>
     </div>
 
@@ -87,7 +84,7 @@
 
 
 
-    <script>
+    <!--<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -96,7 +93,7 @@
         ga('create', 'UA-56825472-1', 'auto');
         ga('send', 'pageview');
 
-    </script>
+    </script>-->
 
 </body>
 
