--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Dependinces--->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="src/itemslide.min.js"></script>
+    <script src="src/itemslide.js"></script>
 
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
@@ -28,8 +28,8 @@
     <header>
 
 
-        <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
-        </div>
+        <a style="color:#FFF;text-decoration:none;" href="index.html"><div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div></a>
+
 
         <a id="github" href="https://github.com/itemslide/itemslide.github.io">
             <img src="website-src/octocat.svg" />
@@ -84,7 +84,7 @@
 
 
 
-    <!--<script>
+    <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -93,7 +93,7 @@
         ga('create', 'UA-56825472-1', 'auto');
         ga('send', 'pageview');
 
-    </script>-->
+    </script>
 
 </body>
 
