--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Dependinces--->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="src/itemslide.js"></script>
+    <script src="src/itemslide.min.js"></script>
 
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
