--- a/index.html
+++ b/index.html
@@ -31,12 +31,34 @@
         <a style="color:#FFF;text-decoration:none;" href="index.html"><div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div></a>
 
 
-        <a id="github" href="https://github.com/itemslide/itemslide.github.io">
-            <img src="website-src/octocat.svg" />
-            <br/>Github
-        </a>
+
+
+        <table id="buttons-menu">
+            <tr>
+                <td>
+                    <a id="docs" href="docs/index.html">
+                        <table>
+                            <tr><td><img src="website-src/img/docs.svg" /></td></tr><tr><td><span class="button-text">Docs</span></td></tr>
+                        </table>
+                    </a>
+                </td>
+                <td>
+                    <a id="github" href="https://github.com/itemslide/itemslide.github.io">
+                        <table>
+                                <tr><td><img src="website-src/img/octocat.svg" /></td></tr><tr><td><span class="button-text">Github</span></td></tr>
+                        </table>
+                    </a>
+                </td>
+            </tr>
+        </table>
+
+
+        <!--END OF BUTTONS MENU--->
+
+
+
         <span id="downloadarea">
-    <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
+        <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
         just 5KB minified
         </span>
 
@@ -44,8 +66,8 @@
 
     <div id="welcome">
         <span class="content">
-        jQuery plugin for a touch enabled carousel.<br/>
-            <span class="menu"><a href="docs/index.html">Documentation</a> <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+        <span id="maintitle">jQuery plugin for a touch enabled carousel.</span><br/><br/>
+            <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
         </span>
     </div>
 
